Include non-located samples in error calculation
- Include for correct building and floor percentage
- Don't include in error mean (unlocated samples don't have a defined error)
- Update swagger documentation
